--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
+    <title>History of Internet</title>
 </head>
 <body>
+
+<h1>History of Internet</h1>
 
 </body>
 </html>
