Creation of Pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 
 <h1>History of Internet</h1>
+<p>Paragraph goes here.</p>
+<a href="https://www.google.com">This is a link</a>
 
 </body>
 </html>
