Temp Img, team.html test

--- a/team.html
+++ b/team.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Team</title>
 </head>
 <body>
+
+<div class="card" style="width:400px">
+  <img class="card-img-top" src="/images/img_avatar1.png" alt="Card image">
+  <div class="card-body">
+    <h4 class="card-title">Steven Vargas</h4>
+    <p class="card-text">Some example text.</p>
+    <a href="#" class="btn btn-primary">LinkedIn</a>
+  </div>
+</div>
 
 </body>
 </html>
